--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "developer-portfolio",
   "version": "1.0.0",
-  "description": "Software Developer Portfolio Template built with react.js bootstrap that helps you showcase your work and skills as a software developer.",
+  "description": "",
   "main": "index.js",
   "repository": "https://github.com/EmmanuelisCoding/Portfolio-v2",
-  "author": "Hanzla Tauqeer",
-  "license": "MIT",
+  "author": "Emmanuel Owouko",
+  "license": "",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
